--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -7,7 +7,7 @@
     <title>Articles Page</title>
   </head>
   <body>
-    <h1>Saved Crtpto Article</h1>
+    <h1>Saved Crypto Article</h1>
     <form action="/articles" method="POST">
       <br />
       <br />
