--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -7,7 +7,7 @@
     <title>News Page</title>
   </head>
   <body>
-    <h1>Crtpto News of the Day</h1>
+    <h1>Crypto News of the Day</h1>
     <form action="/articles" method="POST">
       <button type="submit">Save</button>
       <!-- </form> -->
